--- a/kubernetes-cka-part3/000.intro.md
+++ b/kubernetes-cka-part3/000.intro.md
@@ -127,35 +127,96 @@ https://rtfm.co.ua/en/kubernetes-clusterip-vs-nodeport-vs-loadbalancer-services-
 ### Know How to Use Ingress Controllers and Ingress Resources
 
 
-####v Kubernetes ingress controllers
+#### Kubernetes ingress controllers
 
 Ingress controllers in Kubernetes
+https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/
 
 Kubernetes ingress controller overview
+https://medium.com/swlh/kubernetes-ingress-controller-overview-81abbaca19ec
 
 Kubernetes ingress controllers: Choose the right one
+https://itnext.io/kubernetes-ingress-controllers-how-to-choose-the-right-one-part-1-41d3554978d2
 
 Setting up an ingress controller on a cluster
+https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengsettingupingresscontroller.htm
 
 Installation Guide – NGINX ingress controller
+https://kubernetes.github.io/ingress-nginx/deploy/
 
 NGINX ingress controller for Kubernetes
+https://www.nginx.com/products/nginx/kubernetes-ingress-controller/
 
 #### Ingress resources
 
 What is Ingress?
+https://unofficial-kubernetes.readthedocs.io/en/latest/concepts/services-networking/ingress/
 
 Kubernetes ingress for beginners
+https://thenewstack.io/kubernetes-ingress-for-beginners/
 
 Create an ingress resource
+https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/#create-an-ingress-resource
 
 Set up Ingress on Minikube with the NGINX Ingress Controller
+https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
 
 
 ### Know How to Configure and Use CoreDNS
 
+What is CoreDNS?
+https://github.com/coredns/coredns
+
+Understanding CoreDNS in Kubernetes
+https://www.youtube.com/watch?v=qRiLmLACYSY
+
+Using CoreDNS for service discovery
+https://kubernetes.io/docs/tasks/administer-cluster/coredns/
+
+How to deploy CoreDNS in Kubernetes?
+https://github.com/coredns/deployment/tree/master/kubernetes
+
+Configuring DNS servers for Kubernetes clusters
+https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengconfiguringdnsserver.htm
+
+Create custom DNS entries with CoreDNS
+https://coredns.io/2017/05/08/custom-dns-entries-for-kubernetes/
+
+#### CoreDNS on cloud platforms
+
+
+Using CoreDNS on GKE
+https://medium.com/google-cloud/using-coredns-on-gke-3973598ab561
+
+Customize CoreDNS with Azure Kubernetes Service
+https://docs.microsoft.com/en-us/azure/aks/coredns-custom
+
+Configure a conditional forwarder with CoreDNS in AWS
+https://aws.amazon.com/premiumsupport/knowledge-center/eks-conditional-forwarder-coredns/
+
 ### Choose an Appropriate Container Network Interface Plugin
 
+
+What is Container Network Interface (CNI)?
+https://github.com/containernetworking/cni
+
+Introduction to CNI, the Container Network Interface
+https://www.cncf.io/webinars/introduction-to-cni-the-container-network-interface/
+
+Container Networking Interface aka CNI
+https://medium.com/@vikram.fugro/container-networking-interface-aka-cni-bdfe23f865cf
+
+Network plugins in Kubernetes
+https://kubernetes.io/docs/concepts/extend-kubernetes/compute-storage-net/network-plugins/
+
+Understanding container network interface plugins
+https://ieeexplore.ieee.org/document/9153266/
+
+Container Networking Interface landscape
+https://thenewstack.io/container-networking-landscape-cni-coreos-cnm-docker/
+
+Choosing a Kubernetes CNI plugin
+https://medium.com/thermokline/how-to-choose-a-k8s-cni-plugin-771edf4842c0
 
 
 
