--- a/kubernetes-cka-part4/000.intro.md
+++ b/kubernetes-cka-part4/000.intro.md
@@ -32,3 +32,139 @@ https://dev.to/vikcodes/having-trouble-with-your-kubernetes-deployments-start-wi
 
 https://learnk8s.io/troubleshooting-deployments
 
+## Detailed links:
+
+
+### Evaluate Cluster and Node Logging
+Logging architecture
+https://kubernetes.io/docs/concepts/cluster-administration/logging/
+
+A practical guide to Kubernetes logging
+https://logz.io/blog/a-practical-guide-to-kubernetes-logging/
+A complete guide to Kubernetes logging
+
+https://kubernetes.io/blog/2015/06/cluster-level-logging-with-kubernetes/
+
+
+Cluster-level logging with Kubernetes
+https://kubernetes.io/blog/2015/06/cluster-level-logging-with-kubernetes/
+
+Cluster-level logging in Kubernetes with Fluentd
+https://medium.com/kubernetes-tutorials/cluster-level-logging-in-kubernetes-with-fluentd-e59aa2b6093a
+
+Managing cluster logs with IBM Log Analysis
+https://cloud.ibm.com/docs/Log-Analysis-with-LogDNA?topic=Log-Analysis-with-LogDNA-kube
+
+Collecting application logs on Kubernetes
+https://timber.io/blog/collecting-application-logs-on-kubernetes/
+
+Kubernetes logging through Logspout
+https://documentation.solarwinds.com/en/Success_Center/loggly/Content/admin/kubernetes-logging-through-logspout.htm
+
+### Understand How to Monitor Applications
+
+Introduction to Kubernetes monitoring
+https://rancher.com/blog/2018/2018-10-18-monitoring-kubernetes/
+Tools for monitoring resources
+
+https://kubernetes.io/docs/tasks/debug-application-cluster/resource-usage-monitoring/
+Kubernetes monitoring best practices
+
+https://logz.io/blog/kubernetes-monitoring/
+A complete introduction to monitoring Kubernetes
+
+https://newrelic.com/platform/kubernetes/monitoring-guide
+9 top open-source tools for monitoring Kubernetes
+
+Monitoring Kubernetes in production
+https://sysdig.com/blog/monitoring-kubernetes/
+
+#### Monitoring applications
+
+Monitoring application performance in Kubernetes
+https://blog.newrelic.com/engineering/monitoring-application-performance-in-kubernetes/
+
+Monitoring applications on Kubernetes
+https://convox.com/blog/k8s-monitoring-overview
+
+Tips for monitoring Kubernetes applications
+https://www.metricfire.com/blog/tips-for-monitoring-kubernetes-applications/
+
+### Manage Container stdout & stderr Logs
+
+Kubernetes – mount container stdout stderr logs
+https://stackoverflow.com/questions/54915956/kubernetes-mount-container-stdout-stderr-logs
+
+Collect logfiles inside the container
+https://github.com/kubernetes/kubernetes/issues/12567
+
+View logs for a container or service
+https://docs.docker.com/config/containers/logging/
+
+### Troubleshoot Application Failure
+
+Troubleshoot Applications
+https://kubernetes.io/docs/tasks/debug-application-cluster/debug-application/
+
+Application Introspection and Debugging
+https://kubernetes.io/docs/tasks/debug-application-cluster/debug-application-introspection/
+
+How-to Guide: Debug a Kubernetes application
+https://epsagon.com/development/how-to-guide-debugging-a-kubernetes-application/
+
+GitHub: Troubleshooting Kubernetes apps
+https://github.com/mhausenblas/troubleshooting-k8s-apps
+
+Learn how to troubleshoot applications running on Kubernetes
+https://akomljen.com/learn-how-to-troubleshoot-applications-running-on-kubernetes/
+
+Simplified K8s troubleshooting with app-centric abstraction
+https://www.hyscale.io/blog/kubernetes-troubleshooting/
+
+Troubleshooting applications In Kubernetes
+https://symantec-enterprise-blogs.security.com/blogs/expert-perspectives/troubleshooting-applications-kubernetes
+
+Debug running Pods
+https://kubernetes.io/docs/tasks/debug-application-cluster/debug-running-pod/
+
+Debug Services
+https://kubernetes.io/docs/tasks/debug-application-cluster/debug-service/
+
+### Troubleshoot Cluster Component Failure
+
+Troubleshoot Clusters
+https://kubernetes.io/docs/tasks/debug-application-cluster/debug-cluster/
+
+Cluster troubleshooting guide
+http://pwittrock.github.io/docs/tasks/debug-application-cluster/debug-cluster/
+
+Troubleshooting cluster issues
+https://docs.platform9.com/kubernetes/troubleshooting/issues-cluster/
+
+Troubleshooting Kubernetes
+https://www.linode.com/docs/kubernetes/troubleshooting-kubernetes/
+
+### Troubleshoot Networking
+
+
+Troubleshooting Kubernetes networking issues
+https://gravitational.com/blog/troubleshooting-kubernetes-networking/
+
+How to troubleshoot Kubernetes network issues?
+https://blog.appoptics.com/how-to-troubleshoot-kubernetes-network-issues/
+
+Inspect Kubernetes networking
+https://www.digitalocean.com/community/tutorials/how-to-inspect-kubernetes-networking
+
+Troubleshooting Kubernetes networking on Windows
+https://techcommunity.microsoft.com/t5/networking-blog/troubleshooting-kubernetes-networking-on-windows-part-1/ba-p/508648
+
+Kubernetes troubleshooting: Networking & DNS connectivity
+https://itnext.io/kubernetes-troubleshooting-saga-part-2-networking-and-dns-connectivity-7f11013f6148
+
+Understand & troubleshoot the “Magic” of Kubernetes networking
+https://www.youtube.com/watch?v=knIJEzTd3kc
+
+Debugging Kubernetes networking
+https://www.praqma.com/stories/debugging-kubernetes-networking/
+
