--- a/kubernetes-cka-part5/000.intro.md
+++ b/kubernetes-cka-part5/000.intro.md
@@ -16,3 +16,120 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 <details>
 <summary> StorageClass, PersistentVolume, and PersitentVolumeClaim examples </summary>
 
+
+## Detailed links:
+
+
+### Understand Storage Classes, Persistent Volumes​
+#### Storage classes
+
+Storage classes in Kubernetes
+https://kubernetes.io/docs/concepts/storage/storage-classes/
+
+Dynamic provisioning & storage classes in Kubernetes
+https://kubernetes.io/blog/2017/03/dynamic-provisioning-and-storage-classes-kubernetes/
+
+Change the default storage class
+https://kubernetes.io/docs/tasks/administer-cluster/change-default-storage-class/
+
+Understanding Kubernetes storage basics
+https://netapp-trident.readthedocs.io/en/stable-v18.07/kubernetes/operations/tasks/storage-classes.html
+
+Managing storage classes
+https://netapp-trident.readthedocs.io/en/stable-v18.07/kubernetes/operations/tasks/storage-classes.html
+
+How to use custom storage classes in Kubernetes?
+https://itnext.io/how-to-use-custom-storage-classes-in-kubernetes-edc568acfdfe
+
+Persistent storage class configuration in Kubernetes
+https://docs.pingcap.com/tidb-in-kubernetes/stable/configure-storage-class
+
+#### Persistent Volumes
+
+Persistent volumes in Kubernetes
+https://kubernetes.io/docs/concepts/storage/persistent-volumes/
+
+Introduction to Kubernetes Persistent Volumes
+https://phoenixnap.com/kb/kubernetes-persistent-volumes
+
+Configure a pod to use persistent volume for storage
+https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/
+
+Persistent Volumes example
+https://kubernetesbyexample.com/pv/
+
+Kubernetes Persistent Volumes
+https://portworx.com/tutorial-kubernetes-persistent-volumes/
+
+### Understand Volume Mode, Access Modes and Reclaim Policies for Volumes
+
+Volume Mode in Kubernetes
+https://kubernetes.io/docs/concepts/storage/persistent-volumes/#volume-mode
+
+#### Access Modes
+
+Access Modes
+https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
+
+Kubernetes persistent volume Access mode
+https://stackoverflow.com/questions/37649541/kubernetes-persistent-volume-accessmode
+
+Access modes in Kubernetes
+https://stackoverflow.com/questions/57798267/kubernetes-persistent-volume-access-modes-readwriteonce-vs-readonlymany-vs-read
+
+#### Reclaim policies for Volumes
+
+Reclaim policy of volume
+https://kubernetes.io/docs/concepts/storage/persistent-volumes/#reclaim-policy
+
+Change the Reclaim Policy of a PersistentVolume
+https://kubernetes.io/docs/tasks/administer-cluster/change-pv-reclaim-policy/
+
+How to set Reclaim Policy for PersistentVolumeClaim
+https://medium.com/faun/kubernetes-how-to-set-reclaimpolicy-for-persistentvolumeclaim-7eb7d002bb2e
+
+Kubernetes PVC Reclaim Policy
+https://www.decodingdevops.com/kubernetes-pvc-reclaim-policy-tutorial/
+
+### Understand Persistent Volume Claims Primitive
+
+PersistentVolumeClaims
+https://v1-16.docs.kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims
+
+What is PersistentVolumeClaim?
+https://kubernetes.io/docs/concepts/storage/volumes/#persistentvolumeclaim
+
+Introduction to PersistentVolumeClaims
+https://cloud.google.com/kubernetes-engine/docs/concepts/persistent-volumes#persistentvolumeclaims
+
+Create a PersistentVolumeClaim
+https://kubernetes.io/docs/tasks/configure-pod-container/configure-persistent-volume-storage/#create-a-persistentvolumeclaim
+
+Provisioning a Persistent Volume Claim
+https://docs.cloud.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengcreatingpersistentvolumeclaim.htm
+
+PVC – GitHub issue
+https://github.com/kubernetes-sigs/aws-efs-csi-driver/issues/123
+
+### Know How to Configure Applications with Persistent Storage
+
+Understanding Kubernetes storage basics
+https://cloud.ibm.com/docs/containers?topic=containers-kube_concepts
+
+Kubernetes Persistent Storage: Why, Where and How?
+https://cloud.netapp.com/blog/kubernetes-persistent-storage-why-where-and-how
+
+Persistent storage
+https://kubernetes-on-aws.readthedocs.io/en/latest/user-guide/using-volumes.html
+
+How volumes and storage work in Kubernetes
+https://www.youtube.com/watch?v=inJ7YJ-jt8I
+
+Why is storage on Kubernetes so hard?
+https://softwareengineeringdaily.com/2019/01/11/why-is-storage-on-kubernetes-is-so-hard/
+
+A complete storage guide for your Kubernetes storage problems
+https://www.cncf.io/blog/2020/04/28/a-complete-storage-guide-for-your-kubernetes-storage-problems/
+
+Get started provisioning storage in Kubernetes
+https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux_atomic_host/7/html/getting_started_with_kubernetes/get_started_provisioning_storage_in_kubernetes
