--- a/kubernetes-cka-part5/000.intro.md
+++ b/kubernetes-cka-part5/000.intro.md
@@ -14,11 +14,9 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 4. Know how to [configure applications with persistent storage](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/)
 
 <details>
-<summary> StorageClass, PersistentVolume, and PersitentVolumeClaim examples </summary>
-
+<summary>
 
 ## Detailed links:
-
 
 ### Understand Storage Classes, Persistent Volumes​
 #### Storage classes
@@ -133,3 +131,5 @@ https://www.cncf.io/blog/2020/04/28/a-complete-storage-guide-for-your-kubernetes
 
 Get started provisioning storage in Kubernetes
 https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux_atomic_host/7/html/getting_started_with_kubernetes/get_started_provisioning_storage_in_kubernetes
+
+</summary>
