--- a/kubernetes-cka-part5/000.intro.md
+++ b/kubernetes-cka-part5/000.intro.md
@@ -13,10 +13,8 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 
 4. Know how to [configure applications with persistent storage](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/)
 
-<details>
+<details>Detailed links:
 <summary>
-
-## Detailed links:
 
 ### Understand Storage Classes, Persistent Volumes​
 #### Storage classes
