--- a/kubernetes-cka-part5/000.intro.md
+++ b/kubernetes-cka-part5/000.intro.md
@@ -13,7 +13,7 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 
 4. Know how to [configure applications with persistent storage](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/)
 
-<details>Detailed links:
+<details>Detailed links:</details>
 
 <summary>
 
@@ -133,3 +133,5 @@ Get started provisioning storage in Kubernetes
 https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux_atomic_host/7/html/getting_started_with_kubernetes/get_started_provisioning_storage_in_kubernetes
 
 </summary>
+
+</details>
