--- a/kubernetes-cka-part5/000.intro.md
+++ b/kubernetes-cka-part5/000.intro.md
@@ -13,13 +13,11 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 
 4. Know how to [configure applications with persistent storage](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/)
 
-<details>Detailed links:
-
-<summary>
+## Detailed links:
 
 ### Understand Storage Classes, Persistent Volumes​
-#### Storage classes
 
+#### Storage classes
 
 Storage classes in Kubernetes
 https://kubernetes.io/docs/concepts/storage/storage-classes/
@@ -132,6 +130,3 @@ https://www.cncf.io/blog/2020/04/28/a-complete-storage-guide-for-your-kubernetes
 Get started provisioning storage in Kubernetes
 https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux_atomic_host/7/html/getting_started_with_kubernetes/get_started_provisioning_storage_in_kubernetes
 
-</summary>
-
-</details>
