--- a/kubernetes-cka-part1/000.intro.md
+++ b/kubernetes-cka-part1/000.intro.md
@@ -41,7 +41,7 @@ Kubeadm deep dive
 https://youtu.be/DhsFfNSIrQ4
 
 
-Detailed links:
+## Detailed links:
 
 
 ### Manage Role-based Access Control (RBAC)
