--- a/kubernetes-cka-part4b/000.intro.md
+++ b/kubernetes-cka-part4b/000.intro.md
@@ -1,4 +1,4 @@
-Kubernetes Sandbox for CKA  preparations - part 4
+Kubernetes Sandbox for CKA  preparations - part 4b
 
 
 https://training.linuxfoundation.org/cka-program-changes-2020/
