adding part 5 - taints

--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -6,7 +6,9 @@ a) create pods and services
 
 b) create deployments, rollouts and rollbacks, scale applications
 
-c) control limits and resources 
+c) control limits and resources
+
+d) placing pod on proper nodes, using daemonsets, taints, tolerations and affinity
 
 https://training.linuxfoundation.org/cka-program-changes-2020/
 
